[tool.poetry]
name = "google-cloud-taxis"
version = "0.1.0"
description = ""
authors = ["alastair hamilton <alastair.amhamilton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
pandas = "^1.0.1"
sklearn = "^0.0"
pyarrow = "^0.16.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^5.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
